// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequiredVerificationInfoTask shows a loadable block 1`] = `
<div>
  <div
    class="components-surface components-card wcpay-required-info-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="css-mgwsf4-View-Content em57xhy0"
    >
      <div
        class="components-card__body components-card-body css-1nonx1n-View-Body-borderRadius-large em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <p>
          <b>
            Verifying your details can require:
          </b>
        </p>
        <span
          aria-busy="true"
          class="is-loadable-placeholder is-block"
        >
          <p
            style="line-height: 2;"
          >
            Block placeholder
          </p>
        </span>
        <span
          aria-busy="true"
          class="is-loadable-placeholder is-block"
        >
          <p
            style="line-height: 2;"
          >
            Block placeholder
          </p>
        </span>
        <span
          aria-busy="true"
          class="is-loadable-placeholder is-block"
        >
          <p
            style="line-height: 2;"
          >
            Block placeholder
          </p>
        </span>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`RequiredVerificationInfoTask shows the requirements 1`] = `
<div>
  <div
    class="components-surface components-card wcpay-required-info-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="css-mgwsf4-View-Content em57xhy0"
    >
      <div
        class="components-card__body components-card-body css-1nonx1n-View-Body-borderRadius-large em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <p>
          <b>
            Verifying your details can require:
          </b>
        </p>
        <div
          class="onboarding__requirement-group"
        >
          <svg
            class="gridicon gridicons-institution"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M2 19h20v3H2zM12 2L2 6v2h20V6zM17 10h3v7h-3zM10.5 10h3v7h-3zM4 10h3v7H4z"
              />
            </g>
          </svg>
          <div
            class="headline"
          >
            Company information
          </div>
          <div
            class="subline"
          >
            name and Company Tax ID
          </div>
        </div>
        <div
          class="onboarding__requirement-group"
        >
          <svg
            class="gridicon gridicons-user"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M12 4a4 4 0 110 8 4 4 0 010-8zm0 16s8 0 8-2c0-2.4-3.9-5-8-5s-8 2.6-8 5c0 2 8 2 8 2z"
              />
            </g>
          </svg>
          <div
            class="headline"
          >
            Representative details
          </div>
          <div
            class="subline"
          >
            name, date of birth, address, email and phone
          </div>
        </div>
        <div
          class="onboarding__requirement-group"
        >
          <svg
            class="gridicon gridicons-credit-card"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M20 4H4a2 2 0 00-2 2v12a2 2 0 002 2h16a2 2 0 002-2V6a2 2 0 00-2-2zm0 2v2H4V6h16zM4 18v-6h16v6H4zm2-4h7v2H6v-2zm9 0h3v2h-3v-2z"
              />
            </g>
          </svg>
          <div
            class="headline"
          >
            Company bank account details
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;
